--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "types": [
       "vite/client",
       "jest",
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src"
