--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "tailwindcss": "^4.1.10",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.0.0",
