rota de autorização finalizada, token salvo nos cookies

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.518.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
@@ -56,6 +57,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
